# claude-opus-4.6-create-a-financial-model

./: .gitignore  Alphabet_IB_Model_v5.xlsx  DEVELOPMENT_LOG.md  README.md  build_ib_model_v5.py  financial_model.md
docs/: SKILL-ib-financial-model.md
markitwrite/: pyproject.toml
markitwrite/demo/: demo.py  demo_vision.py  output_notes.md  output_report.docx  output_slides.pptx
markitwrite/src/markitwrite/: __init__.py  __main__.py
markitwrite/src/markitwrite/vision/: __init__.py  analyzer.py  assistant.py  capture.py
screenshots/: README.md
